--- a/PopularMovies/app/build.gradle
+++ b/PopularMovies/app/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:cardview-v7:23.0.1'
+    compile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+
 }
