--- a/PopularMovies/app/src/main/AndroidManifest.xml
+++ b/PopularMovies/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".Global"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,6 +29,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.ashishbahl.popularmovies.MainActivity" />
         </activity>
+
+        <provider
+            android:name=".data.MovieProvider"
+            android:authorities="@string/content_authority"
+            android:exported="true" />
+
         <activity
             android:name=".DetailActivity"
             android:label="@string/title_activity_detail"
@@ -37,10 +44,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.ashishbahl.popularmovies.MainActivity" />
         </activity>
-        <provider
-            android:authorities="@string/content_authority"
-            android:name=".data.MovieProvider"
-            android:exported="true"/>
     </application>
 
 </manifest>
